Authorization implementation changes added
